--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@rainbow-me/rainbowkit": "^2.2.10",
     "@sendgrid/mail": "^8.1.4",
+    "@tanstack/react-query": "^5.90.18",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
-    "mongoose": "^8.5.1",
-    "mongoose-url-slugs": "^1.0.2",
     "concurrently": "^9.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -30,6 +31,8 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.460.0",
+    "mongoose": "^8.5.1",
+    "mongoose-url-slugs": "^0.1.4",
     "next": "15.4.10",
     "paytmchecksum": "^1.5.1",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -38,7 +41,9 @@
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "viem": "^2.44.4",
+    "wagmi": "^2.19.5"
   },
   "devDependencies": {
     "@types/node": "^20",
