--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node server/server.js | next dev",
     "build": "next build",
-    "start": "npm run dev",
+    "dont-start": "npm run dev",
     "lint": "next lint"
   },
   "dependencies": {
